# setuptools-proto

./: Pipfile  README.md  pytest.ini  setup.cfg  setup.py  setuptools_proto.py
.github/workflows/: ci.yml
src/setuptools_proto/: command.py
tests/: test_build_proto.py  test_setuptools_proto.py
tests/integration/: test_build_proto.py
tests/proto/: service.proto
tests/proto/echo/: echo.proto
tests/unit/: test_setuptools_proto.py
