[metadata]
author = James Lan
author_email = jameslan@gmail.com
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Setuptools Plugin
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.6

[options.entry_points]
distutils.commands =
    build_proto = setuptools_proto:ProtoBuild
setuptools.cmd_deps =
    proto_py_dep = build_py:build_proto
distutils.setup_keywords =
    proto_modules = setuptools_proto:proto_modules

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist

max-complexity = 10
max-line-length = 99
